# notebook-lm-clone

./: .gitignore  PRODUCTION_DEPLOYMENT.md  QUICK_START.md  README.md  notebook-lm-clone.case-study.json
backend/: .dockerignore  .env.example  DOCKER.md  DOCKER_SECURITY_UPDATE.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run-docker.ps1  run-docker.sh  run.py  run_migration.py  setup.ps1  setup.sh  validate-env.ps1  validate-env.sh
backend/app/: api.py  config.py  dependencies.py  logger.py  schemas.py
backend/app/models/: user.py
backend/app/routes/: auth.py  chat.py  documents.py  podcast.py
backend/migrations/: env.py
backend/migrations/versions/: 984c884b5d03_autogenerate.py
backend/src/audio_processing/: audio_transcriber.py
backend/src/auth/: auth_client.py
backend/src/document_processing/: doc_processor.py
backend/src/embeddings/: embedding_generator.py
backend/src/generation/: rag.py
backend/src/podcast/: script_generator.py  text_to_speech.py
backend/src/vector_database/: qdrant_vector_db.py
frontend/: .dockerignore  .env.example  DOCKER.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  middleware.ts  next.config.js  package-lock.json  package.json  run-docker.ps1  run-docker.sh  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  Citation.tsx  LandingPageIcons.tsx  SourceUpload.tsx  SourcesSidebar.tsx  StudioTab.tsx
frontend/lib/: api-client.ts  store.ts
(+5 files in other folders)
